[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]

[node name="Window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="."]
margin_left = 15.0
margin_top = 57.0
margin_right = 451.0
margin_bottom = 586.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengeList" type="ItemList" parent="."]
margin_left = 464.0
margin_top = 57.0
margin_right = 1010.0
margin_bottom = 375.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Label" parent="."]
margin_left = 22.0
margin_top = 14.0
margin_right = 448.0
margin_bottom = 50.0
text = "Online Players:"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengeLabel" type="Label" parent="."]
margin_left = 465.0
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 53.0
text = "Incoming Challenges:"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explanation" type="Label" parent="."]
margin_left = 466.0
margin_top = 390.0
margin_right = 1005.0
margin_bottom = 584.0
text = "Double-Click item to accept / challenge player. The game will begin when you / the other player accepts the challenge."
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_activated" from="PlayerList" to="." method="_on_playerList_item_activated"]
[connection signal="item_activated" from="ChallengeList" to="." method="_on_challengeList_item_activated"]
